[package]
name = "se7endrl19"
version = "0.1.0"
authors = ["Alic Szecsei <aszecsei@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = "0.2.37"
specs = { version = "0.14.3", default-features = false }
shred = { version = "0.7.1", default-features = false }
shred-derive = "0.5.1"

[dependencies.web-sys]
version = "0.3.14"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'EventTarget',
  'KeyboardEvent',
]

[features]
default = ["console_error_panic_hook"]
